--- a/LAB2_GUI/MainWindow.xaml
+++ b/LAB2_GUI/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="489.574" Width="323.105">
     <Grid>
         <RadioButton x:Name="rbtnClient" Content="Client" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="31,17,0,0" IsChecked="True"/>
-        <RadioButton x:Name="rbtnServer" Content="Server" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="31,37,0,0" IsChecked="True"/>
+        <RadioButton x:Name="rbtnServer" Content="Server" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="31,37,0,0" IsChecked="False"/>
         <Button x:Name="btnStart" Content="Start connetcion" HorizontalAlignment="Left" Margin="102,17,0,0" VerticalAlignment="Top" Width="107" Height="35" Click="btnStart_Click"/>
         <Button x:Name="btnSend" Content="Send" HorizontalAlignment="Left" Margin="181,421,0,0" VerticalAlignment="Top" Width="62" Height="28" Click="btnSend_Click"/>
         <Button x:Name="btnGet" Content="Get message" HorizontalAlignment="Left" Margin="230,17,0,0" VerticalAlignment="Top" Width="75" Height="35" Click="btnGet_Click"/>
